ui: Updated zoom to 1.5 to avoid overlapping with FAB
This way the trick in the right most side is not overlapped by
the fab.

--- a/AnkiDroid/src/main/assets/2048-react/src/main.scss
+++ b/AnkiDroid/src/main/assets/2048-react/src/main.scss
@@ -33,7 +33,7 @@ body {
 }
 
 #boardDiv {
-  zoom: 1.75;
+  zoom: 1.5;
 }
 
 .board {
